--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
-apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'eclipse'
 
-sourceCompatibility = 1.7
-version = '1.0'
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+version = '1.1'
 
 jar {
     manifest {
@@ -15,11 +19,14 @@ repositories {
 }
 
 dependencies {
-	compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.+'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
-    testCompile group: 'com.tngtech.java', name: 'junit-dataprovider', version: '1.+'
+	implementation 'commons-beanutils:commons-beanutils:1.9.4'
+	implementation 'org.apache.commons:commons-lang3:3.11'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+	implementation 'joda-time:joda-time:2.10.6'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
 
 // Create a single Jar with all dependencies
