--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.2'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+    testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
 }
 
 // Create a single Jar with all dependencies
